[package]
name = "cached-run"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Stores and resuses the result of a command."
documentation = "https://gitlab.com/com.marcoseravalli/cached-run"
repository = "https://gitlab.com/com.marcoseravalli/cached-run"
categories = ["command-line-utilities"]

[[bin]]
bench = false
path = "src/main.rs"
name = "caru"

[dependencies]
dirs = "4.0"
atty = "0.2"
